# lead-scoring-gcp

./: .gitignore  Dockerfile  GITHUB_CHEATSHEET.md  README.md  cloudbuild.yaml  config.py  deploy.sh  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  scorer.py
dashboard/: app.py
data/processed/: feature_matrix.csv
docs/: decisions.md  feature_dictionary.md
models/: lead_scorer_v1.pkl
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  02_feature_engineering_2222.ipynb  03_rule_based_baseline.ipynb  04_model_layer.ipynb  05_scoring_output.ipynb
outputs/models/: feature_cols.pkl  lr_final.pkl  rf_final.pkl  scaler.pkl
scripts/: train_model.py
src/: stage5_scoring_output.py.py
src/utils/: display.py  io.py
